--- a/PROJETO-CLIMÁTICO/style.css
+++ b/PROJETO-CLIMÁTICO/style.css
@@ -15,10 +15,10 @@ body {
 }
 
 :root {
-    --fundo-body: #2c2c2c;
+    --fundo-body: #272626;
     --texto-principal: #ffffff;
     --cor-icon: #000000;
-    --fundo-clima: #1d1d36; 
+    --fundo-clima: #2c2c55; 
 }
 
 div#center {
@@ -33,7 +33,7 @@ div#center {
 main {
     background-color: var(--fundo-clima);
     border-radius: 10px;
-    padding: 10px;
+    padding: 20px;
 }
 
 main article#header {
@@ -41,13 +41,8 @@ main article#header {
     flex-direction: column;
 }
 
-#header > h1 {
-    text-align: center;
-    margin-bottom: 5px;
-}
-
 #header > #buscador {
-    border: 1px solid red;
+    
 }
 
 #buscador #icons {
@@ -61,5 +56,89 @@ main article#header {
     padding: 5px;
     border-radius: 5px;
     font-size: 15px;
+}
+
+article#principal #local-horario {
+    margin: 10px 0px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 7px;
+}
+
+#local-horario #local {
+    font-size: 1.4em;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#local-horario #horario {
+    font-weight: bold;
+    font-size: 2em;
+} 
+
+div#clima {
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-flow: row nowrap;
+    background-color: var(--fundo-body);
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+}
+
+div#clima #imagem {
+    width: 50px;
+}
+
+div#clima > .graus-condi {
+    display: flex;
+    flex-direction: column;
     
+}
+
+.graus-condi > #graus {
+    font-size: 2.2em;
+    font-weight: 600;
+}
+
+.graus-condi > #condicao {
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+article#footer {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    gap: 10px;
+}
+
+article#footer .estatisticas {
+    border-radius: 5px;
+    padding: 5px;
+    background-color: #333372;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.estatisticas .estatistica-coluna {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.estatisticas #icons-estat {
+    font-size: 18px;
+}
+
+.estatisticas .esta1 {
+    font-size: 0.7em;
+}
+
+.estatisticas .esta2 {
+    font-size: 0.95em;
 }
